--- a/private/buy.ejs
+++ b/private/buy.ejs
@@ -1,73 +1,61 @@
 <!DOCTYPE html>
-<html lang="FR">
+<html lang="EN">
 
 <head>
-  <meta charset="utf-8">
-  <title>SyllaExchange</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="images/logo.icon">
+    <meta charset="utf-8">
+    <title>SyllaExchange</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/logo.icon">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <header>
-    <a href="/">
-      <img class="logo" src="images/logo.png" alt="SyllaExchange-Logo">
-    </a>
-
-    <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
-
-    <input type="button" value=🛒 id="basketLogo" onclick="location.href='/basket';">
-    <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
-
-  </header>
+    <header>
+        <a href="/">
+            <img class="logo" src="images/logo.png" alt="SyllaExchange-Logo">
+          </a>
+      
+          <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
+      
+          <input type="button" value=🛒 id="basketLogo" onclick="location.href='/basket';">
+          <input type="button" value=<%= user %> id="connexion" onclick="location.href='/login';">      
+    </header>
 </head>
 
 <body>
-  <hr>
+    <hr><br>
 
-  <h2 class="Name">
-    <strong>
-      <%= title %>
-    </strong>
-  </h2>
-  <div class="selling">
-    <img class="imagedulivre" src=<%=image %> alt="Syllabus-image">
-    <div class="txt">
-      <form action="" method="post">
-        <input type="hidden" name="sellerid" value=<%=sellerid %>>
-        <input type="hidden" name="id" value=<%=id %>>
-        <input type="hidden" name="price" value=<%=price %>>
-        <input class="btnAchter" type="submit" value="Ajouter au panier">
-      </form>
-      <p class="resume">
-        <%= desc %>
-          <hr width="100%" color="black">
-      </p>
-      <div class="">
+    <div class="card">
+        <div class="article-image">
+            <img class="book-image" src=<%= image %> alt="Article image">
+        </div>
 
-      </div>
-      <h4 class="SELLER">Seller: </h4>
-      <p>
-        <%= seller %>
-      </p>
-      <p>
-        <%= price %> €
-      </p>
-      <div class="Star">
-        <% for(let i=0; i < rate; i++){ %>
-
-          <span class="fa fa-star checked"></span>
-
-          <% } %>
-
-            <% for (let j=0; j < 5 - rate; j++) { %>
-
-              <span class="fa fa-star"></span>
-
-              <% } %>
-      </div>
+        <div class="article-infos">
+            <h1 class="book-title"><strong><u><%= title %></u></strong></h1>
+            <div class="article-info">
+                <h4 class="book-desc"></h4><%= desc %></h4>
+                <h4 class="book-seller">Selled by: <%= seller %></h4>
+                <h4 class="book-state">State: </h4>
+                <div class="book-stars">
+                    <% for(let i=0; i < rate; i++){ %>
+                        <span class="fa fa-star checked"></span>
+                    <% } %>
+                    
+                    <% for (let j=0; j < 5 - rate; j++) { %>
+                        <span class="fa fa-star"></span>
+                    <% } %>
+                </div>
+            </div>
+            <div class="article-price">
+                <h4 class="book-price">Price: <%= price %>€</h4>
+                <form action="" method="post" class="book-buy-button">
+                    <input type="hidden" name="sellerid" value=<%= sellerid %>>
+                    <input type="hidden" name="id" value=<%= id %>>
+                    <input type="hidden" name="price" value=<%= price %>>
+                    <input class="buy-button" type="submit" value="Add to basket">
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </body>
 
 </html>
