--- a/private/style.css
+++ b/private/style.css
@@ -88,28 +88,6 @@ header {
   background-color: rgb(53, 49, 49);
 }
 
-
-#indexLayout {
-  display: grid;
-  grid-template-columns: 1fr 6fr 1fr;
-  grid-template-rows: 1fr 1fr 2fr;
-}
-
-#sellLink {
-  grid-column-start: 1;
-  grid-column-end: 1;
-  grid-row-start: 1;
-  grid-row-end: 1;
-}
-
-.mastfoot {
-  padding-top: 0px;
-  text-align: center;
-  margin: auto;
-}
-
-
-
 /* SELL STAR */
 .checked {
   color: orange;
@@ -170,129 +148,6 @@ header {
     line-height: 21px;
   }
 }
-
-
-/* AFFICHAGE DES ARTICLES */
-/* PARTIE COMMUNE */
-
-.Book_name {
-  position: relative;
-  text-decoration: underline;
-  text-transform: uppercase;
-}
-
-.info {
-  font-size: 10px;
-}
-
-.arrow {
-  cursor: pointer;
-}
-
-/* AFFICHAGE VERTICAL */
-.catalogueV {
-  /* left: 25%; */
-  grid-column-start: 2;
-  grid-column-end: 2;
-  grid-row-start: 3;
-  grid-row-end: 3;
-
-  position: relative;
-  height: 80vh;
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
-.itemsV {
-  width: 30vw;
-  height: 15vh;
-  background-color: #e4fdc4;
-  border: 1px solid black;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: space-between;
-
-}
-
-.booksV {
-  position: relative;
-  right: 20%;
-  border-radius: 3px;
-  width: 16%;
-  height: 95%;
-  border: 2px solid black;
-  border-radius: 4px;
-  padding: 2px;
-  background-color: white;
-}
-
-.acheterV {
-  border-radius: 30px;
-  width: 25%;
-  height: 102%;
-  cursor: pointer;
-  border: black 1px solid;
-  border-left: none;
-}
-
-/* AFFICHAGE HORIZONTAL */
-.catalogueH {
-
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 3;
-
-  top: 10vh;
-  left: 10%;
-  position: relative;
-  height: 50vh;
-  width: 80vw;
-  backdrop-filter: blur(30px);
-  align-items: center;
-  display: flex;
-  justify-content: space-around;
-}
-
-.itemsH {
-  width: 15vw;
-  height: 45vh;
-  background-color: #e4fdc4;
-  border: 2px solid black;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-.booksH {
-  width: 100px;
-  height: 160px;
-  border: 2px solid black;
-  padding: 2px;
-  background-color: white;
-}
-
-.acheterH {
-  position: relative;
-  top: 15px;
-  border-radius: 30px;
-  width: 100px;
-  cursor: pointer;
-}
-
-
-
-
-
-/* ######################################################## */
-/* ######################### DONE ######################### */
-/* ######################################################## */
 
 /* SELL*/
 .SellProduct {
@@ -545,7 +400,7 @@ header {
 }
 
 /* INDEX */
-
+/* Vertical view */
 .articles-container {
   margin-right: 15%;
   margin-left: 15%;
@@ -635,53 +490,50 @@ header {
   position: relative;
 }
 
-/* ############### */
-/* TESTING PURPOSE */
-/* ############### */
+/* Horizontal view */
 
-.vertical-article-container {
-  margin-right: 15%;
-  margin-left: 15%;
-  table-layout: fixed;
-  border: 1px solid;
-  border-radius: 30px;
-  font-size: larger;
-  flex-direction: column;
-  align-items: center;
-  background-image: linear-gradient(#005AA7, #caf1f4);
-  background-color: #333;
-  overflow: auto;
-  white-space: nowrap
-}
-
-.vertical-card {
-  margin: auto;
+.vertical-wrapper {
   box-sizing: border-box;
   overflow: hidden;
-  background-image: linear-gradient(#fbc2eb, #a6c1ee);
-  padding: 20px;
-  width: 80%;
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: space-between;
-  border-radius: 20px;
-}
-
-.vertical-art-image {
-  margin-left: 25px;
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  border-radius: 5px;
   position: relative;
-  padding: 5px;
+  margin: auto;
+  margin-top: 5%;
 }
 
-.vertical-title {
-  float: left;
+.vertical-articles-container {
+  display: flex; 
+  flex-direction: row; 
+  justify-content: space-between;
+  background-image: linear-gradient(#005AA7, #caf1f4);
+  overflow: auto;
+  white-space: nowrap;
+  border-radius: 30px;
 }
 
-.vertical-price {
-  float: right;
+.book {
+  width: auto; 
+  padding: 20px; 
+  border: 1px solid #c9c9c9;
+}
+
+.book img {
+  width: 130px;
+  height: 200px;
+  border: 2px solid black;
+  padding: 2px;
+  background-color: white;
+}
+
+.book button{
+  position: relative;
+  top: 15px;
+  border-radius: 30px;
+  width: 100px;
+  cursor: pointer;
+  margin-left: 10%;
+}
+
+.vertical-book-price {
+  margin: auto;
+  text-align: center;
 }
